+ Match acception added. + Match cancellation added but not working. + Now, questions are sending after both of the rivals accept the match.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,7 +21,9 @@
                     "text": "-enable-pretty-printing",
                     "ignoreFailures": true
                 }
-            ]
+            ],
+            //"preLaunchTask": "build_server",
+            "miDebuggerPath": "/usr/bin/gdb"
         }
     ]
 }
